improved formatting and structure

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -6,20 +6,20 @@
    "metadata": {},
    "source": [
     "# Week 2: Recommender Systems\n",
-    "---\n",
+    "\n",
     "### Table of Contents\n",
-    "* [1. Making Recommendations](#1.-Making-Recommendations)\n",
-    "* [2. Using per-item features](#2.-Using-per-item-features)\n",
-    "* [3. Collaborative filtering algorithm](#3.-Collaborative-filtering-algorithm)\n",
-    "* [4. Binary labels: favs, likes and clicks](#4.-Binary-labels:-favs,-likes-and-clicks)"
+    "1. [Making Recommendations](#Making-Recommendations)\n",
+    "2. [Using per-item features](#Using-per-item-features)\n",
+    "3. [Collaborative filtering algorithm](#Collaborative-filtering-algorithm)\n",
+    "4. [Binary labels: favs, likes and clicks](#Binary-labels:-favs,-likes-and-clicks)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "820d2506-955d-4f91-bd5f-19cfd3a2a2bd",
+   "id": "93cc2e0f",
    "metadata": {},
    "source": [
-    "<br>"
+    "---"
    ]
   },
   {
@@ -27,12 +27,12 @@
    "id": "0aad6020-87f3-4c9d-8e98-18d98708a993",
    "metadata": {},
    "source": [
-    "## 1. Making Recommendations\n",
+    "## Making Recommendations\n",
     "\n",
     "This section introduces the topic of Recommender Systems, highlighting their significant commercial impact and setting up the basic framework and notation using the example of movie rating prediction.\n",
     "\n",
-    "---\n",
     "### Commercial Importance\n",
+    "\n",
     "* **Widespread Use:** Recommender systems are used everywhere online (e.g., shopping sites like Amazon, streaming services like Netflix, food delivery apps).\n",
     "* **High Value:** For many companies, a large fraction of sales and economic value is directly driven by the success of their recommender systems.\n",
     "* **Academic vs. Commercial Attention:** The commercial impact of recommender systems is arguably vastly greater than the attention it receives in academia.\n",
@@ -48,7 +48,7 @@
     "| **Actual Rating** | $y^{(i, j)}$ | The rating (0 to 5 stars) given by user $j$ to movie $i$. (E.g., $y^{(3, 2)} = 4$). |\n",
     "\n",
     "### Next Step\n",
-    "* The subsequent lesson will begin developing an algorithm to predict the missing ratings. The first model will temporarily assume that **features (extra information)** about the movies (e.g., whether it is a romance movie or an action movie) are already available. Later in the notes, we will address how to build the system when these explicit movie features are not available."
+    "The subsequent lesson will begin developing an algorithm to predict the missing ratings. The first model will temporarily assume that features (extra information) about the movies (e.g., whether it is a romance movie or an action movie) are already available. Later in the notes, we will address how to build the system when these explicit movie features are not available."
    ]
   },
   {
@@ -56,7 +56,7 @@
    "id": "d27fe117-e203-4d24-951e-5556e3a65fd6",
    "metadata": {},
    "source": [
-    "<br>"
+    "---"
    ]
   },
   {
@@ -64,14 +64,13 @@
    "id": "53dcb8a0-978b-4734-b356-2b2064f41b98",
    "metadata": {},
    "source": [
-    "## 2. Using per-item features\n",
+    "## Using per-item features\n",
     "\n",
     "This section details the first approach to building a recommender system: using **pre-existing item features** to create a personalized linear regression model for each user.\n",
     "\n",
-    "---\n",
-    "\n",
     "### Framework and Notation\n",
-    "**Initial Assumption:** We have pre-defined features ($X$) for each item (movie), such as $x_1$ (Romance level) and $x_2$ (Action level).\n",
+    "\n",
+    "We have pre-defined features ($X$) for each item (movie), such as $x_1$ (Romance level) and $x_2$ (Action level).\n",
     "* $n_u$: Number of users (e.g., 4).\n",
     "* $n_m$: Number of movies/items (e.g., 5).\n",
     "* $n$: Number of features (e.g., 2).\n",
@@ -79,50 +78,58 @@
     "* $y^{(i, j)}$: The actual rating given by user $j$ to movie $i$.\n",
     "\n",
     "### The Model: Personalized Linear Regression\n",
+    "\n",
     "The system fits a separate linear regression model for each user $j$ to predict their rating for any movie $i$.\n",
     "\n",
-    "**Prediction Formula:**\n",
     "$$\\text{Prediction for } y^{(i, j)} = \\mathbf{w}^{(j)} \\cdot \\mathbf{x}^{(i)} + b^{(j)}$$\n",
     "* $\\mathbf{w}^{(j)}$ and $b^{(j)}$ are the unique parameters (weights and bias) learned for user $j$.\n",
     "* $\\mathbf{x}^{(i)}$ is the feature vector for movie $i$.\n",
     "\n",
     "### The Cost Function\n",
+    "\n",
     "The objective is to learn the parameters ($\\mathbf{w}^{(j)}$ and $b^{(j)}$) for all users simultaneously by minimizing a regularized mean squared error cost function.\n",
     "\n",
     "* **Cost Function for All Users ($J$):** The cost is the sum of the individual cost functions for every user.\n",
+    "    \n",
     "    $$J(\\mathbf{w}^{(1)}, b^{(1)}, \\dots, \\mathbf{w}^{(n_u)}, b^{(n_u)}) = \\sum_{j=1}^{n_u} J(\\mathbf{w}^{(j)}, b^{(j)})$$\n",
     "\n",
     "* **Individual User Cost ($J(\\mathbf{w}^{(j)}, b^{(j)})$):**\n",
+    "    \n",
     "    $$J(\\mathbf{w}^{(j)}, b^{(j)}) = \\frac{1}{2} \\sum_{i: r(i, j)=1} \\left( (\\mathbf{w}^{(j)} \\cdot \\mathbf{x}^{(i)} + b^{(j)}) - y^{(i, j)} \\right)^2 + \\frac{\\lambda}{2} \\sum_{k=1}^{n} (w_k^{(j)})^2$$\n",
+    "\n",
     "    * The sum $\\sum_{i: r(i, j)=1}$ means we only calculate the error for movies that user $j$ has actually rated.\n",
     "    * The second term is standard regularization to prevent overfitting. (Note: The normalization constant $1/m^{(j)}$ is omitted for convenience, as it doesn't change the parameters at the minimum; <u>for detailed information see Bonus below)</u>.\n",
     "\n",
-    "### Next Challenge\n",
-    "* The current method relies on having pre-defined features ($\\mathbf{x}^{(i)}$) for every item.\n",
-    "* The next section will explore a modification of this algorithm—**Collaborative Filtering**—which works even when these detailed item features are not available beforehand.\n",
+    "### Bonus: *Dropping the Normalization Constant in Recommender Systems*\n",
     "\n",
-    "---\n",
-    "### [Bonus]: Dropping the Normalization Constant in Recommender Systems\n",
     "The term related to the number of movies rated by user $j$, $m^{(j)}$, is often dropped from the denominator of the Collaborative Filtering cost function because it is a constant scaling factor that does not affect the model's ultimate performance.\n",
     "\n",
     "#### 1. Scaling Does Not Change the Minimum\n",
+    "\n",
     "* The overall goal is to find the parameters ($\\mathbf{w}^{(j)}$ and $b^{(j)}$) that minimize the cost function $J$.\n",
     "* $1/2m^{(j)}$ is a constant scaling factor determined by the training data.\n",
     "* Multiplying or dividing the entire cost function by a positive constant only scales it vertically; it does not change the location of the minimum point (the optimal parameters).\n",
     "    $$ \\text{arg min}_{\\mathbf{w}, b} \\left[ J_{\\text{original}}(\\mathbf{w}, b) \\right] = \\text{arg min}_{\\mathbf{w}, b} \\left[ \\mathbf{C} \\cdot J_{\\text{simplified}}(\\mathbf{w}, b) \\right] \\quad \\text{where } \\mathbf{C} = \\frac{1}{2m^{(j)}} \\text{ is the constant.}$$\n",
     "\n",
     "#### 2. Simplifies Optimization\n",
+    "\n",
     "* In Gradient Descent, dropping the constant $\\frac{1}{2m^{(j)}}$ only scales the magnitude of the gradient. This is compensated for by adjusting the learning rate ($\\alpha$).\n",
     "* For Collaborative Filtering, the overall cost function $J_{\\text{overall}}$ is a sum of individual user costs $J(\\mathbf{w}^{(j)}, b^{(j)})$. Using different division factors ($m^{(j)}$) for every user's loss and regularization terms unnecessarily complicates the algebra for joint optimization.\n",
     "* Dropping the constant leads to a cleaner, unified cost function primarily focused on minimization.\n",
     "\n",
     "#### Comparison to Linear Regression (MSE)\n",
+    "\n",
     "The normalization term ($1/m$) is typically retained in standard Linear Regression (Mean Squared Error, MSE) for statistical and practical reasons.\n",
     "\n",
     "| Context | Purpose of $J$ | Why $1/m$ is Kept/Dropped |\n",
     "| :--- | :--- | :--- |\n",
     "| Linear Regression | Evaluation and Comparison (MSE) | Kept, because it defines the average squared error (MSE), making the cost value interpretable and comparable across datasets of different sizes. |\n",
-    "| Recommender System | Optimization | Dropped, because $m^{(j)}$ is a constant that doesn't change the optimal parameters and unnecessarily complicates the joint cost function. |"
+    "| Recommender System | Optimization | Dropped, because $m^{(j)}$ is a constant that doesn't change the optimal parameters and unnecessarily complicates the joint cost function. |\n",
+    "\n",
+    "### Next Challenge\n",
+    "\n",
+    "* The current method relies on having pre-defined features ($\\mathbf{x}^{(i)}$) for every item.\n",
+    "* The next section will explore a modification of this algorithm—**Collaborative Filtering**—which works even when these detailed item features are not available beforehand."
    ]
   },
   {
@@ -130,7 +137,7 @@
    "id": "49b379da-5907-4ff3-8e6d-965ff6c4a3ee",
    "metadata": {},
    "source": [
-    "<br>"
+    "---"
    ]
   },
   {
@@ -138,22 +145,24 @@
    "id": "c22e82ca-5576-4228-b9dc-f89b10aed2aa",
    "metadata": {},
    "source": [
-    "## 3. Collaborative filtering algorithm\n",
+    "## Collaborative filtering algorithm\n",
     "\n",
     "This section introduces **Collaborative Filtering**, a powerful technique for recommender systems where the item features ($\\mathbf{x}$) are learned from the user ratings rather than being provided in advance.\n",
     "\n",
-    "---\n",
     "### 1. The Challenge: Learning Item Features ($\\mathbf{x}$)\n",
+    "\n",
     "In the previous model, we assumed movie features ($\\mathbf{x}$) were known (e.g., Romance, Action level). In the new new approach, when features are unknown, the ratings provided by multiple users on the same item can be leveraged to learn what those item features ($\\mathbf{x}$) should be.\n",
     "\n",
     "**Why it Works:** Having ratings from several users (each with known preference parameters $\\mathbf{w}$ and $b$) allows the system to infer the features of an unfeatured movie that best explain those ratings. This relies on the \"collaboration\" of ratings from multiple users on the same item, which defines algorithm's name.\n",
     "\n",
     "### 2. Cost Function for Learning Features ($\\mathbf{x}$)\n",
+    "\n",
     "If the user preference parameters ($\\mathbf{w}^{(j)}, b^{(j)}$) are temporarily fixed, the features for a single movie $i$ ($\\mathbf{x}^{(i)}$) are learned by minimizing the cost function:\n",
     "\n",
     "$$\\min_{\\mathbf{x}^{(i)}} J(\\mathbf{x}^{(i)}) = \\frac{1}{2} \\sum_{j: r(i, j)=1} \\left( (\\mathbf{w}^{(j)} \\cdot \\mathbf{x}^{(i)} + b^{(j)}) - y^{(i, j)} \\right)^2 + \\frac{\\lambda}{2} \\sum_{k=1}^{n} (x_k^{(i)})^2$$\n",
     "\n",
     "### 3. The Full Collaborative Filtering Cost Function\n",
+    "\n",
     "The final algorithm combines the objective of learning user preferences ($\\mathbf{w}, b$) and learning item features ($\\mathbf{x}$) into a single unified cost function ($J$):\n",
     "\n",
     "* **Minimization:** The algorithm simultaneously minimizes $J$ with respect to all parameters: the user parameters ($\\mathbf{w}^{(j)}, b^{(j)}$ for all users $j$) and the movie features ($\\mathbf{x}^{(i)}$ for all movies $i$).\n",
@@ -162,6 +171,7 @@
     "$$J(\\mathbf{w}, \\mathbf{b}, \\mathbf{x}) = \\frac{1}{2} \\sum_{(i, j): r(i, j)=1} \\left( (\\mathbf{w}^{(j)} \\cdot \\mathbf{x}^{(i)} + b^{(j)}) - y^{(i, j)} \\right)^2 + \\frac{\\lambda}{2} \\sum_{j=1}^{n_u} \\sum_{k=1}^{n} (w_k^{(j)})^2 + \\frac{\\lambda}{2} \\sum_{i=1}^{n_m} \\sum_{k=1}^{n} (x_k^{(i)})^2$$\n",
     "\n",
     "### 4. Optimization\n",
+    "\n",
     "Gradient Descent or other optimization algorithms are used to minimize the cost function $J$. In this full formulation, both the user preferences ($\\mathbf{w}, \\mathbf{b}$) and the item features ($\\mathbf{x}$) are treated as parameters to be learned and are updated iteratively.\n",
     "\n",
     "$$\n",
@@ -181,7 +191,7 @@
    "id": "3ccf1b0f-e04f-4692-b82b-bd7012414b66",
    "metadata": {},
    "source": [
-    "<br>"
+    "---"
    ]
   },
   {
@@ -189,12 +199,12 @@
    "id": "dac93af2-037c-497f-95bf-851c0662f6f9",
    "metadata": {},
    "source": [
-    "## 4. Binary labels: favs, likes and clicks\n",
+    "## Binary labels: favs, likes and clicks\n",
     "\n",
     "This section explains how to adapt the collaborative filtering algorithm from predicting continuous ratings (like 1–5 stars) to predicting **binary labels** (like/dislike, purchase/not purchase), using a method analogous to moving from linear regression to logistic regression.\n",
     "\n",
-    "---\n",
     "### Binary Label Context\n",
+    "\n",
     "Many recommender systems deal with binary labels (1 or 0) rather than star ratings.\n",
     "\n",
     "* **Label Meanings (Engagement):**\n",
@@ -204,6 +214,7 @@
     "* **Goal:** Predict the probability that a user will like or engage with a new item (the '?' items) to decide what to recommend.\n",
     "\n",
     "### The Model: Logistic Regression Analogy\n",
+    "\n",
     "The model shifts from predicting a numerical rating to predicting a probability of engagement. The linear combination of user preferences ($\\mathbf{w}^{(j)}$) and item features ($\\mathbf{x}^{(i)}$) is passed through the logistic function ($g$) (also known as the sigmoid function).\n",
     "\n",
     "$$\\text{P}(y^{(i, j)}=1) = g(\\mathbf{w}^{(j)} \\cdot \\mathbf{x}^{(i)} + b^{(j)})$$\n",
@@ -211,6 +222,7 @@
     "where $g(z) = \\frac{1}{1 + e^{-z}}$.\n",
     "\n",
     "### The Cost Function: Binary Cross-Entropy\n",
+    "\n",
     "Since the output is a probability and the labels are binary, the squared error cost function (used for ratings) is replaced with the Binary Cross-Entropy Loss (or log loss), which is standard for logistic regression.\n",
     "\n",
     "* **Loss for a Single Example:**\n",
@@ -220,6 +232,7 @@
     "$$J(\\mathbf{w}, \\mathbf{b}, \\mathbf{x}) = \\sum_{(i, j): r(i, j)=1} L(f(x^{(i)}), y^{(i,j)}) + \\frac{\\lambda}{2} \\sum_{j=1}^{n_u} \\sum_{k=1}^{n} (w_k^{(j)})^2 + \\frac{\\lambda}{2} \\sum_{i=1}^{n_m} \\sum_{k=1}^{n} (x_k^{(i)})^2$$\n",
     "\n",
     "### Generalization\n",
+    "\n",
     "This generalization significantly opens up the set of applications that can be addressed by collaborative filtering, allowing the algorithm to work with implicit feedback (like clicks or viewing time) rather than requiring explicit user ratings."
    ]
   },
@@ -228,16 +241,8 @@
    "id": "b144d958-e503-4659-b428-1ddbd3b7aee4",
    "metadata": {},
    "source": [
-    "<br>"
+    "---"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9932e04-098e-44e3-b72e-e5aa77ef9be1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
