updated TOC for test

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "### Table of Contents\n",
     "1. [Making Recommendations](#Making-Recommendations)\n",
-    "2. [Using per-item features](#Using-per-item-features)\n",
+    "2. [Using per-item features](#using-per-item-features)\n",
     "3. [Collaborative filtering algorithm](#Collaborative-filtering-algorithm)\n",
     "4. [Binary labels: favs, likes and clicks](#Binary-labels:-favs,-likes-and-clicks)"
    ]
