fix: corrected table of contents links for collaborative filtering and binary labels sections

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -10,8 +10,8 @@
     "### Table of Contents\n",
     "1. [Making Recommendations](#Making-Recommendations)\n",
     "2. [Using per-item features](#using-per-item-features)\n",
-    "3. [Collaborative filtering algorithm](#Collaborative-filtering-algorithm)\n",
-    "4. [Binary labels: favs, likes and clicks](#Binary-labels:-favs,-likes-and-clicks)"
+    "3. [Collaborative filtering algorithm](#collaborative-filtering-algorithm)\n",
+    "4. [Binary labels: favs, likes and clicks](#binary-labels-favs-likes-and-clicks)"
    ]
   },
   {
