doc: add TensorFlow implementation section for collaborative filtering

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -293,6 +293,59 @@
    "cell_type": "markdown",
    "id": "019d6e15",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb23d8e6",
+   "metadata": {},
+   "source": [
+    "## TensorFlow implementation of collaborative filtering\n",
+    "\n",
+    "This section explains how to implement the collaborative filtering algorithm using **TensorFlow's Automatic Differentiation (Auto Diff)** feature, which simplifies optimization by removing the need for manual calculus.\n",
+    "\n",
+    "### TensorFlow for Non-Neural Networks\n",
+    "\n",
+    "* TensorFlow is not limited to neural networks; it is a versatile tool for implementing various learning algorithms, including collaborative filtering.\n",
+    "* The primary advantage of using TensorFlow here is its Automatic Differentiation (Auto Diff) feature (sometimes incorrectly called Auto Grad).\n",
+    "\n",
+    "### Automatic Differentiation (Auto Diff)\n",
+    "\n",
+    "* **Goal:** To implement Gradient Descent (or other optimization algorithms) without manually computing the partial derivatives of the cost function ($J$).\n",
+    "* **Mechanism (Gradient Tape):** TensorFlow uses a feature called the **Gradient Tape** (`tf.GradientTape`).\n",
+    "    1.  The user defines how to compute the cost function ($J$).\n",
+    "    2.  The Gradient Tape records the sequence of operations (the forward pass) used to calculate $J$.\n",
+    "    3.  TensorFlow then uses this recorded sequence to automatically compute the necessary derivatives (the backward pass).\n",
+    "\n",
+    "### Implementing Gradient Descent (Conceptual Example)\n",
+    "\n",
+    "The core steps in Python/TensorFlow syntax are:\n",
+    "1.  **Initialize Parameters:** Define parameters (like $w, b, x$) as TensorFlow variables (`tf.Variable`).\n",
+    "2.  **Use Gradient Tape:** Wrap the calculation of the cost function $J$ inside the `with tf.GradientTape as tape:` block.\n",
+    "3.  **Compute Derivatives:** Use `tape.gradient(J, [parameters])` to get the derivatives (gradients) of $J$ with respect to the specified parameters.\n",
+    "4.  **Update Parameters:** Use the gradients to update the parameters (e.g., $w = w - \\alpha \\cdot \\frac{\\partial J}{\\partial w}$).\n",
+    "\n",
+    "### Collaborative Filtering Implementation\n",
+    "\n",
+    "* **Algorithm Choice:** Using Auto Diff allows the use of more powerful algorithms than simple Gradient Descent, such as the **Adam optimization algorithm**.\n",
+    "* **Cost Function:** The user must provide the code to compute the collaborative filtering cost function $J$ (which takes inputs like $\\mathbf{x}, \\mathbf{w}, \\mathbf{b}$, normalized ratings $Y_{\\text{norm}}$, and the regularization parameter $\\lambda$).\n",
+    "* **Optimization Steps (Adam):**\n",
+    "    1.  Define the Adam optimizer (`keras.optimizers.Adam`).\n",
+    "    2.  Use the Gradient Tape to compute the cost $J$.\n",
+    "    3.  Compute the derivatives (`grads`).\n",
+    "    4.  Apply the gradients using the optimizer (`optimizer.apply_gradients`).\n",
+    "\n",
+    "### Why Not Use Standard Keras (`model.compile`, `model.fit`)?\n",
+    "* The collaborative filtering cost function **does not neatly fit** into the standard, pre-defined neural network layer types (like `Dense` layers) provided by Keras/TensorFlow.\n",
+    "* Therefore, the custom approach of defining the cost function and using Auto Diff is necessary, making it a very effective way to implement custom learning algorithms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e14c0a47",
+   "metadata": {},
    "source": []
   }
  ],
