doc: Add Finding related items section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -346,6 +346,53 @@
    "cell_type": "markdown",
    "id": "e14c0a47",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a970b821",
+   "metadata": {},
+   "source": [
+    "## Finding related items\n",
+    "\n",
+    "The collaborative filtering algorithm, which learns item features from user ratings, can be used to identify related items based on the similarity of their learned feature vectors. The algorithm, however, suffers from limitations such as the cold start problem and an inability to easily integrate external side information.\n",
+    "\n",
+    "The collaborative filtering algorithm automatically learns a feature vector $\\mathbf{x}^{(i)}$ for every item $i$. Although these features (e.g., $x_1, x_2$) are often difficult for a human to interpret (they don't neatly correspond to genres like \"action\" or \"romance\"), they collectively capture the essence of the item.\n",
+    "\n",
+    "To find items related to item $i$, the algorithm searches for other items $k$ whose feature vectors $\\mathbf{x}^{(k)}$ are mathematically close to $\\mathbf{x}^{(i)}$. The similarity (or dissimilarity) between two items' feature vectors is typically measured using the **squared distance** between them:\n",
+    "\n",
+    "$$\\text{Squared Distance} = \\sum_{l=1}^{n} (x_l^{(k)} - x_l^{(i)})^2$$\n",
+    "\n",
+    "By finding the items (movies, products, etc.) with the smallest squared distance, the system identifies and recommends the most similar items to the user.\n",
+    "\n",
+    "### Limitations of Collaborative Filtering\n",
+    "\n",
+    "The collaborative filtering algorithm has two primary weaknesses:\n",
+    "\n",
+    "#### 1. The Cold Start Problem\n",
+    "\n",
+    "The algorithm struggles when it lacks sufficient data for either a new item or a new user.\n",
+    "* **New Items:** If a new movie or product is added to the catalog and few users have rated it yet, the algorithm cannot accurately determine its features $\\mathbf{x}^{(i)}$ or recommend it effectively.\n",
+    "* **New Users:** Similarly, if a new user has rated only a few items, the system cannot accurately determine their preference parameters ($\\mathbf{w}^{(j)}, b^{(j)}$) to give personalized predictions (though mean normalization can help provide reasonable initial guesses based on overall average ratings).\n",
+    "\n",
+    "#### 2. Inability to Use Side Information\n",
+    "\n",
+    "Collaborative filtering does not provide a natural mechanism to incorporate external data (side information) that is known about items or users.\n",
+    "* **Item Side Information:** This includes known facts about a movie like its genre, cast, director, budget, or studio.\n",
+    "* **User Side Information:** This includes user demographics (age, gender, location), stated preferences, or even behavioral cues like their web browser or whether they are using a mobile or desktop device.\n",
+    "\n",
+    "Integrating this rich, external side information is necessary to improve accuracy and address the cold start problem more robustly.\n",
+    "\n",
+    "### Next\n",
+    "The next step in recommender system development is **Content-Based Filtering**, which is designed to specifically address these limitations by leveraging side information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75a34f4d",
+   "metadata": {},
    "source": []
   }
  ],
