doc: Add Vectorized Formulation for Collaborative Filtering in TensorFlow section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -393,6 +393,140 @@
    "cell_type": "markdown",
    "id": "75a34f4d",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e76541fc",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Vectorized Formulation for Collaborative Filtering in TensorFlow\n",
+    "\n",
+    "To efficiently implement the collaborative filtering cost function using matrix operations in TensorFlow, we organize all learning parameters and ratings into matrix form.\n",
+    "\n",
+    "### Notation\n",
+    "\n",
+    "| Notation | Description | Dimension |\n",
+    "| :--- | :--- | :--- |\n",
+    "| $n_m$ | Number of movies/items ||\n",
+    "| $n_u$ | Number of users | |\n",
+    "| $n$ | Number of learned features ||\n",
+    "| $y^{(i,j)}$ | Rating given by user $j$ on movie $i$ | Scalar |\n",
+    "| $r^{(i,j)}$ | Binary indicator: 1 if rated, 0 otherwise | Scalar |\n",
+    "| $\\mathbf{x}^{(i)}$ | Feature vector for movie $i$ | $n \\times 1$ |\n",
+    "| $\\mathbf{w}^{(j)}$ | Parameter vector for user $j$ | $n \\times 1$|\n",
+    "| $b^{(j)}$ | Bias parameter for user $j$ | Scalar |\n",
+    "| $\\mathbf{X}$ | Matrix of all item feature vectors | $n_m \\times n$ | Rows are $(\\mathbf{x}^{(i)})^T$ |\n",
+    "| $\\mathbf{W}$ | Matrix of all user parameter vectors | $n_u \\times n$ | Rows are $(\\mathbf{w}^{(j)})^T$ |\n",
+    "| $\\mathbf{b}$ | Vector of all user bias parameters | $1 \\times n_u$ | Rows are $b^{(j)}$ |\n",
+    "| $\\mathbf{Y}$ | Matrix of user ratings (normalized) | $n_m \\times n_u$ | Elements are $y^{(i,j)}$ |\n",
+    "| $\\mathbf{R}$ | Binary indicator matrix | $n_m \\times n_u$ | Elements are $r^{(i,j)}$ |\n",
+    "\n",
+    "### Matrix Definitions\n",
+    "Here is how learning parameters would look like in matrix form:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{X} = \n",
+    "\\begin{bmatrix}\n",
+    "--- (\\mathbf{x}^{(0)})^T --- \\\\\n",
+    "--- (\\mathbf{x}^{(1)})^T --- \\\\\n",
+    "\\vdots \\\\\n",
+    "--- (\\mathbf{x}^{(n_m-1)})^T --- \\\\\n",
+    "\\end{bmatrix} , \\quad\n",
+    "\\mathbf{W} = \n",
+    "\\begin{bmatrix}\n",
+    "--- (\\mathbf{w}^{(0)})^T --- \\\\\n",
+    "--- (\\mathbf{w}^{(1)})^T --- \\\\\n",
+    "\\vdots \\\\\n",
+    "--- (\\mathbf{w}^{(n_u-1)})^T --- \\\\\n",
+    "\\end{bmatrix},\\quad\n",
+    "\\mathbf{ b} = \n",
+    "\\begin{bmatrix}\n",
+    "b^{(0)}  \\\\\n",
+    "b^{(1)} \\\\\n",
+    "\\vdots \\\\\n",
+    "b^{(n_u-1)} \\\\\n",
+    "\\end{bmatrix}^T\n",
+    "$$\n",
+    "\n",
+    "### Vectorized Cost Function ($J$)\n",
+    "\n",
+    "The vectorized collaborative filtering cost function includes the squared error between the predicted rating and the actual rating, along with regularization terms for the feature matrix $\\mathbf{X}$ and the parameter matrix $\\mathbf{W}$.\n",
+    "\n",
+    "$$\n",
+    "J(\\mathbf{X}, \\mathbf{W}, \\mathbf{b}) = \\frac{1}{2} \\sum_{(i,j): r^{(i,j)}=1} \\left( (\\mathbf{w}^{(j)} \\cdot \\mathbf{x}^{(i)} + b^{(j)}) - y^{(i, j)} \\right)^2 + \\frac{\\lambda}{2} \\sum_{i=1}^{n_m} \\sum_{k=1}^{n} (x_k^{(i)})^2 + \\frac{\\lambda}{2} \\sum_{j=1}^{n_u} \\sum_{k=1}^{n} (w_k^{(j)})^2\n",
+    "$$\n",
+    "\n",
+    "### Python Implementation with TensorFlow\n",
+    "\n",
+    "#### 1\\. Cost Function Definition\n",
+    "\n",
+    "The prediction matrix is calculated using the dot product of the feature matrix $\\mathbf{X}$ and the transpose of the parameter matrix $\\mathbf{W}$ (plus the bias vector $\\mathbf{b}$).\n",
+    "\n",
+    "```python\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "def cofi_cost_func_v(X, W, b, Y, R, lambda_):\n",
+    "    \"\"\"\n",
+    "    Returns the vectorized cost for Collaborative Filtering.\n",
+    "    Args:\n",
+    "      X (tf.Variable (num_movies,num_features)): Matrix of item features\n",
+    "      W (tf.Variable (num_users,num_features)) : Matrix of user parameters\n",
+    "      b (tf.Variable (1, num_users))            : Vector of user bias parameters\n",
+    "      Y (ndarray (num_movies,num_users)    : Matrix of user ratings\n",
+    "      R (ndarray (num_movies,num_users)    : Binary indicator matrix (1 if rated)\n",
+    "      lambda_ (float): Regularization parameter\n",
+    "    Returns:\n",
+    "      J (float) : Cost\n",
+    "    \"\"\"\n",
+    "    # Prediction matrix (tf.linalg.matmul(X, tf.transpose(W)) + b) \n",
+    "    # masked by R (tf.transpose(W) is used because W is (num_users, num_features))\n",
+    "    error_matrix = (tf.linalg.matmul(X, tf.transpose(W)) + b - Y) * R\n",
+    "    \n",
+    "    # Squared Error Term\n",
+    "    squared_error = 0.5 * tf.reduce_sum(error_matrix**2)\n",
+    "    \n",
+    "    # Regularization Term\n",
+    "    regularization = (lambda_ / 2) * (tf.reduce_sum(X**2) + tf.reduce_sum(W**2))\n",
+    "    \n",
+    "    J = squared_error + regularization\n",
+    "    return J\n",
+    "```\n",
+    "\n",
+    "#### 2\\. Optimization using GradientTape (Auto Diff)\n",
+    "\n",
+    "TensorFlow's `tf.GradientTape` is used to automatically compute the gradients (partial derivatives) of the cost function with respect to the trainable parameters ($\\mathbf{X}$, $\\mathbf{W}$, and $\\mathbf{b}$).\n",
+    "\n",
+    "```python\n",
+    "# Assuming X, W, and b are initialized as tf.Variables and optimizer is defined\n",
+    "iterations = 200\n",
+    "lambda_ = 1\n",
+    "\n",
+    "for iter in range(iterations):\n",
+    "    # 1. Record the forward pass computation of the cost\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        cost_value = cofi_cost_func_v(X, W, b, Ynorm, R, lambda_)\n",
+    "\n",
+    "    # 2. Compute the gradients using Automatic Differentiation\n",
+    "    # Retrieves derivatives of cost_value with respect to the variables [X, W, b]\n",
+    "    grads = tape.gradient( cost_value, [X, W, b] )\n",
+    "\n",
+    "    # 3. Apply the gradients using the defined optimizer (e.g., Adam)\n",
+    "    optimizer.apply_gradients( zip(grads, [X, W, b]) )\n",
+    "\n",
+    "    # Log periodically\n",
+    "    if iter % 20 == 0:\n",
+    "        print(f\"Training loss at iteration {iter}: {cost_value:0.1f}\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "199eb199",
+   "metadata": {},
    "source": []
   }
  ],
