doc: Add deep learning for content-based filtering section with neural network architecture and implementation details

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -579,6 +579,51 @@
    "cell_type": "markdown",
    "id": "8a886eff",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "236c2ee4",
+   "metadata": {},
+   "source": [
+    "## Deep learning for content-based filtering\n",
+    "\n",
+    "The content-based filtering algorithm can be powerfully implemented using deep learning, where separate neural networks are used to generate compact preference vectors for users and items, which are then matched via a dot product.\n",
+    "\n",
+    "### Neural Network Architecture\n",
+    "\n",
+    "* **User Network:** A neural network takes the user's raw feature vector ($\\mathbf{x}_u$) as input and outputs a compact user preference vector ($\\mathbf{v}_u$).\n",
+    "* **Movie Network:** A separate neural network takes the movie's raw feature vector ($\\mathbf{x}_m$) as input and outputs a compact movie attribute vector ($\\mathbf{v}_m$).\n",
+    "* **Output Layer:** Both $\\mathbf{v}_u$ and $\\mathbf{v}_m$ must have the same dimension (e.g., 32 numbers) to allow for the dot product.\n",
+    "\n",
+    "<img src='images/cbf_nn.png' width='700px'>\n",
+    "\n",
+    "### Prediction and Cost Function\n",
+    "\n",
+    "* **Prediction:** The predicted rating ($\\hat{y}^{(i, j)}$) is the dot product of the two output vectors:\n",
+    "$$\\hat{y}^{(i, j)} = \\mathbf{v}_u^{(j)} \\cdot \\mathbf{v}_m^{(i)}$$\n",
+    "* **Binary Labels:** If the target labels are binary (like/dislike), a sigmoid function can be applied to the dot product to predict the probability that the user likes the item.\n",
+    "* **Training Cost ($J$):** All parameters of both the user and movie networks are trained simultaneously using a single cost function that minimizes the squared error between the prediction and the actual rating $y^{(i, j)}$ for all existing ratings:\n",
+    "$$J = \\sum_{(i,j): r^{(i,j)}=1} \\left( (\\mathbf{v}_u^{(j)} \\cdot \\mathbf{v}_m^{(i)}) - y^{(i, j)} \\right)^2 + (\\text{Regularization Term})$$\n",
+    "\n",
+    "### Finding Similar Items\n",
+    "\n",
+    "After training, the movie vector $\\mathbf{v}_m^{(i)}$ effectively describes movie $i$. To find movies similar to movie $i$, the algorithm searches for other movie vectors $\\mathbf{v}_m^{(k)}$ that have a small **squared distance** from $\\mathbf{v}_m^{(i)}$.\n",
+    "\n",
+    "* **Pre-computation:** The process of finding similar items can be pre-computed offline (e.g., nightly) so the results are immediately available to show to a user browsing a specific item.\n",
+    "\n",
+    "### Practical Notes\n",
+    "\n",
+    "* **Feature Engineering:** A significant amount of development time is often spent carefully designing and engineering high-quality user and item features ($\\mathbf{x}_u$ and $\\mathbf{x}_m$) before feeding them into the neural networks.\n",
+    "* **Scalability Challenge:** This approach can be computationally expensive to run, particularly when dealing with a very large catalog of items, which is addressed in more advanced, large-scale systems."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4fe6dd0",
+   "metadata": {},
    "source": []
   }
  ],
