doc: Add Recommending from a large catalogue section.

--- a/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
+++ b/machine-learning/ml-specialization-coursera/course-3/notebooks/week2.ipynb
@@ -624,6 +624,54 @@
    "cell_type": "markdown",
    "id": "d4fe6dd0",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7efc56ef",
+   "metadata": {},
+   "source": [
+    "## Recommending from a large catalogue\n",
+    "\n",
+    "The high-volume nature of modern catalogs makes running a single deep learning model for every user-item prediction computationally infeasible. Large-scale recommender systems solve this with a two-step approach: retrieval and ranking.\n",
+    "\n",
+    "### The Scalability Challenge\n",
+    "\n",
+    "Modern systems (music, movies, e-commerce) have catalogs ranging from millions to tens of millions of items. Running a single, complex neural network inference (computing the dot product $\\mathbf{v}_u \\cdot \\mathbf{v}_m$) millions of times every time a user loads a page is too slow and computationally expensive.\n",
+    "\n",
+    "### The Two-Step Solution\n",
+    "\n",
+    "Large-scale recommender systems are typically divided into two sequential steps to achieve both speed and accuracy:\n",
+    "\n",
+    "#### A. Retrieval Step (Pruning/Candidate Generation)\n",
+    "\n",
+    "* **Goal:** To quickly reduce the catalog size from millions of items to a small, manageable list of plausible candidates (e.g., a few hundred). The focus is on broad coverage rather than fine-tuned accuracy.\n",
+    "* **Methodology (Fast, Pre-computed Lookups):** This step uses methods that can be pre-computed and executed quickly:\n",
+    "    * **Item Similarity:** Retrieve the 10 most similar items for each of the last 10 items the user interacted with (this uses pre-computed similarity tables based on $\\mathbf{v}_m$ vectors).\n",
+    "    * **Genre Popularity:** Add the top items from the user's most viewed genres.\n",
+    "    * **Local Popularity:** Add the top popular items in the user's country or region.\n",
+    "* **Output:** A list of hundreds of item candidates, with duplicates and previously consumed items removed.\n",
+    "\n",
+    "#### B. Ranking Step (Fine-Tuning)\n",
+    "\n",
+    "* **Goal:** To accurately order the small list of candidates retrieved in the first step. The focus is on fine-tuned accuracy.\n",
+    "* **Methodology (Full Inference):** The full, accurate learned model (the combined user and movie neural network) is used:\n",
+    "    1.  The user's preference vector ($\\mathbf{v}_u$) is computed once using the user network.\n",
+    "    2.  The system calculates the predicted rating ($\\mathbf{v}_u \\cdot \\mathbf{v}_m$) for only the few hundred retrieved items.\n",
+    "* **Output:** A ranked list of items, ordered by the user's predicted highest rating/probability of engagement.\n",
+    "\n",
+    "### 3. Optimization and Trade-offs\n",
+    "\n",
+    "* **Efficiency Gain:** The retrieval step efficiently prunes out millions of clearly irrelevant items, allowing the computationally expensive ranking step to run on a small subset, ensuring fast and accurate results.\n",
+    "* **Item Retrieval Count:** Developers must optimize the number of items retrieved (e.g., 100, 500, or 1000). Retrieving more items improves recommendation relevance but slows down the ranking step. Offline experiments are required to find the optimal balance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbcd2675",
+   "metadata": {},
    "source": []
   }
  ],
